# DeltaUID

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
DeltaUID/: __init__.py  version.py
DeltaUID/Delta_download/: __init__.py  utils.py
DeltaUID/Delta_help/: __init__.py  get_help.py  help.json
DeltaUID/Delta_info/: __init__.py
DeltaUID/Delta_login/: __init__.py  login.py  render.py
DeltaUID/Delta_notify/: __init__.py
DeltaUID/Delta_status/: __init__.py
DeltaUID/Delta_user/: __init__.py  image.py  msg_info.py  utils.py
DeltaUID/utils/: const.py  decorators.py  image.py  models.py  resource_manager.py  utils.py
DeltaUID/utils/api/: api.py  util.py  utils.py
DeltaUID/utils/database/: models.py
RatGrinder/: version.py
RatGrinder/ratgrinder_fight/: __init__.py  daba.py  model.py  utils.py
RatGrinder/ratgrinder_help/: get_help.py
RatGrinder/ratgrinder_item/: __init__.py  bag.py  model.py
RatGrinder/ratgrinder_item/item/: armor.json  weapen.json
RatGrinder/ratgrinder_player/: __init__.py  mission.py  model.py
RatGrinder/ratgrinder_start/: __init__.py  bind.py
RatGrinder/ratgrinder_trade/trade_data/: __init__.py
RatGrinder/ratgrinder_weapon/: model.py
RatGrinder/utils/: models.py  utils.py
RatGrinder/utils/database/: models.py
