[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pdm]
distribution = false
[tool.poetry]
name = "DeltaUID"
version = "0.0.1"
description = "基于GsCore, 支持OneBot(QQ)、OneBotV12、QQ频道、微信、KOOK（开黑啦）、Telegram（电报）、FeiShu（飞书）、Discord的全功能HoshinoBot/NoneBot2/Koishi/yunzai/ZeroBot鼠鼠模拟器小游戏"
authors = ["Agnes4m <Z735803792@163.com>"]
readme = "README.md"
homepage = "https://github.com/Agnes4m/DeltaUID"
repository = "https://github.com/Agnes4m/DeltaUID"
documentation = "https://github.com/Agnes4m/DeltaUID/README.md"
packages = [{ include = "DeltaUID" }]
exclude = ["tests", "deploy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Agnes4m/DeltaUID/issues"

[tool.pyright]
disableBytesTypePromotions = false

[tool.basedpyright]
deprecateTypingAliases = false

[project]
name = "DeltaUID"
version = "0.0.1"
description = "基于GsCore, 支持OneBot(QQ)、OneBotV12、QQ频道、微信、KOOK（开黑啦）、Telegram（电报）、FeiShu（飞书）、Discord的全功能HoshinoBot/NoneBot2/Koishi/yunzai/ZeroBot鼠鼠模拟器小游戏"
authors = [
  { name = "Agnes4m", email = "Z735803792@163.com" },
]
dependencies = [
]
requires-python = "==3.12.*"
readme = "README.md"